# Copyright (C) 2023 ANSYS, Inc. and/or its affiliates.
# SPDX-License-Identifier: MIT
#
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.


[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-templates"
version = "1.6.10"
description = "Creates Python projects according to PyAnsys guidelines"
readme = "README.rst"
requires-python = ">=3.8,<4"
license = {file = "LICENSES/MIT.txt"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.core@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "importlib-metadata >=4.0",
    "click>=7.0,<9.0.0",
    "cookiecutter>=2.1.0,<2.3.0",
    "isort>=5.10.1",
]

[project.optional-dependencies]
tests = [
    "pytest==7.4.2",
    "pytest-cov==4.1.0",
]
doc = [
    "ansys-sphinx-theme==0.11.1",
    "numpydoc==1.5.0",
    "sphinx==7.1.2",
    "sphinx-copybutton==0.5.2",
]

[tool.flit.module]
name = "ansys.templates"

[project.scripts]
ansys-templates = "ansys.templates.cli:main"

[project.urls]
Source = "https://github.com/ansys/ansys-templates"
Homepage = "https://templates.ansys.com/"
Documentation = "https://templates.ansys.com/"
Tracker = "https://github.com/ansys/ansys-templates/issues"

[tool.black]
force-exclude = ["src/ansys/templates/python/"]
line-length = "100"

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = "100"
default_section = "THIRDPARTY"
skip_glob = ["src/ansys/templates/python/*"]
filter_files = "true"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys/templates"]
omit = ["ansys/templates/python/*"]

[tool.coverage.report]
show_missing = true
