[build-system]
{%- if cookiecutter.__build_system == "flit" %}
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
{% elif cookiecutter.__build_system == "poetry" %}
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
{% elif cookiecutter.__build_system == "setuptools" %}
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
{% endif -%}

{%- if cookiecutter.__build_system == "flit" %}
[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "{{ cookiecutter.__pkg_name }}"
version = "{{ cookiecutter.__version }}"
description = "{{ cookiecutter.__short_description }}"
readme = "README.rst"
requires-python = ">={{ cookiecutter.__requires_python }}"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.core@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "importlib-metadata >=4.0",
]

[project.optional-dependencies]
tests = [
    "pytest==7.3.0",
    "pytest-cov==4.0.0",
]
doc = [
    "ansys-sphinx-theme==0.9.7",
    "numpydoc==1.5.0",
    "sphinx==5.3.0",
    "sphinx-copybutton==0.5.1",
]


[tool.flit.module]
name = "{{ cookiecutter.__pkg_namespace }}"

[project.urls]
Source = "{{ cookiecutter.__repository_url }}"
Tracker = "{{ cookiecutter.__repository_url }}/issues"
Homepage = "{{ cookiecutter.__repository_url }}"

{% elif cookiecutter.__build_system == "poetry"  %}
[tool.poetry]
# Check https://python-poetry.org/docs/pyproject/ for all available sections
name = "{{ cookiecutter.__pkg_name }}"
version = "{{ cookiecutter.__version }}"
description = "{{ cookiecutter.__short_description }}"
license = "MIT"
authors = ["ANSYS, Inc. <pyansys.core@ansys.com>"]
maintainers = ["PyAnsys developers <pyansys.core@ansys.com>"]
readme = "README.rst"
repository = "{{ cookiecutter.__repository_url }}"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "ansys", from = "src" },
]

[tool.poetry.dependencies]
python = ">={{ cookiecutter.__requires_python }},<4.0"
importlib-metadata = {version = "^4.0", python = "<3.8"}

# Optional documentation dependencies
[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
Sphinx = "^5.3.0"
numpydoc = "^1.5.0"
ansys-sphinx-theme = "^0.9.7"
sphinx-copybutton = "^0.5.1"

# Optional testing dependencies
[tool.poetry.group.tests]
optional = true
[tool.poetry.group.tests.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"

# Optional build requirements
[tool.poetry.group.build]
optional = true
[tool.poetry.group.build.dependencies]
build = "^0.10.0"
twine = "^4.0.2"
{% endif %}
[tool.black]
line-length = {{ cookiecutter.__max_linelength }}

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = {{ cookiecutter.__max_linelength }}
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["{{ cookiecutter.__coverage_source }}"]

[tool.coverage.report]
show_missing = true
